chore: capture build warning inventory